--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -1,4 +1,4 @@
-name: Build Electron Launcher
+name: Release CityVault
 
 on:
   push:
@@ -7,34 +7,69 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
-  build:
+  build-release:
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest]
         arch: [x64]
-    runs-on: ${{ matrix.os }}
-
-    defaults:
-      run:
-        working-directory: launcher
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
+
+      - name: Set version string
+        id: set_version
+        run: |
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+            echo "IS_TAG=true" >> $GITHUB_ENV
+          else
+            echo "VERSION=dev-${GITHUB_RUN_NUMBER}" >> $GITHUB_ENV
+            echo "IS_TAG=false" >> $GITHUB_ENV
+          fi
+
+      - name: Get previous tag (only on tag push)
+        if: env.IS_TAG == 'true'
+        id: prev
+        run: |
+          PREV=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          echo "previous_tag=$PREV" >> $GITHUB_OUTPUT
+
+      - name: Generate changelog (only on tag push)
+        if: env.IS_TAG == 'true'
+        id: changelog
+        run: |
+          if [ -z "${{ steps.prev.outputs.previous_tag }}" ]; then
+            RANGE=""
+          else
+            RANGE="${{ steps.prev.outputs.previous_tag }}..${{ github.ref_name }}"
+          fi
+          echo "changelog<<EOF" >> $GITHUB_OUTPUT
+          git log $RANGE --pretty=format:"- %s" | grep -vEi 'update.*version\\.json|bump.*version\\.json|version\\.json' >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
+      - name: Install launcher dependencies
+        working-directory: launcher
         run: |
           npm ci
           npm install --save-dev @electron/packager
 
-      - name: Package launcher (Linux)
-        if: matrix.os == 'ubuntu-latest'
+      - name: Build Electron launcher (Linux)
+        working-directory: launcher
         run: |
           npx @electron/packager . cityvault-launcher \
             --platform=linux \
@@ -48,77 +83,78 @@ jobs:
             --ignore=".*\\.md" \
             --ignore="^/node_modules/(electron|.*-dev).*" \
             --ignore="^/config"
-        shell: bash
 
-      - name: Package launcher (Windows)
-        if: matrix.os == 'windows-latest'
-        shell: cmd
-        run: >
-          npx @electron/packager . cityvault-launcher
-          --platform=win32
-          --arch=${{ matrix.arch }}
-          --icon=icon.ico
-          --overwrite
-          --asar.unpack=config.json
-          "--ignore=^/tests"
-          "--ignore=^/docs"
-          "--ignore=.*\\.map"
-          "--ignore=.*\\.md"
-          "--ignore=^/node_modules/`(electron`|.*-dev`)`.*"
-          "--ignore=^/config"
-
-      - name: Archive build (Windows) for GitHub Release only
-        if: matrix.os == 'windows-latest' && startsWith(github.ref, 'refs/tags/')
-        run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }} -DestinationPath cityvault-launcher-win.zip
-        shell: pwsh
-
-      - name: Archive build (Linux) for GitHub Release only
-        if: matrix.os == 'ubuntu-latest' && startsWith(github.ref, 'refs/tags/')
+      - name: Archive Linux launcher
+        working-directory: launcher
         run: tar -czf cityvault-launcher-linux.tar.gz cityvault-launcher-linux-${{ matrix.arch }}
+
+      - name: Build Electron launcher (Windows)
+        working-directory: launcher
         shell: bash
+        run: |
+          npx @electron/packager . cityvault-launcher \
+            --platform=win32 \
+            --arch=${{ matrix.arch }} \
+            --icon=icon.ico \
+            --overwrite \
+            --asar.unpack=config.json \
+            --ignore="^/tests" \
+            --ignore="^/docs" \
+            --ignore=".*\\.map" \
+            --ignore=".*\\.md" \
+            --ignore="^/node_modules/(electron|.*-dev).*" \
+            --ignore="^/config"
 
-      - name: Upload Windows build artifact (folder)
-        if: matrix.os == 'windows-latest'
-        uses: actions/upload-artifact@v4
-        with:
-          name: cityvault-launcher-win
-          path: launcher/cityvault-launcher-win32-${{ matrix.arch }}
+      - name: Archive Windows launcher
+        working-directory: launcher
+        run: zip -r cityvault-launcher-win.zip cityvault-launcher-win32-${{ matrix.arch }}
 
-      - name: Upload Linux build artifact (folder)
-        if: matrix.os == 'ubuntu-latest'
-        uses: actions/upload-artifact@v4
-        with:
-          name: cityvault-launcher-linux
-          path: launcher/cityvault-launcher-linux-${{ matrix.arch }}
+      - name: Write version.json
+        run: |
+          echo '{ "version": "${{ env.VERSION }}" }' > version.json
 
-      - name: Upload zipped build to GitHub Release (only for tag)
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Move launchers into launcher_downloads
+        run: |
+          mkdir -p launcher_downloads
+          mv launcher/cityvault-launcher-win.zip launcher_downloads/
+          mv launcher/cityvault-launcher-linux.tar.gz launcher_downloads/
+
+      - name: Create CityVault ZIP including launcher_downloads
+        run: |
+          mkdir -p dist
+          zip -r "dist/cityvault-${{ env.VERSION }}.zip" . -x "*.git*" "node_modules/*"
+
+      - name: Upload Release ZIP (only on tag)
+        if: env.IS_TAG == 'true'
         uses: softprops/action-gh-release@v1
         with:
-          files: |
-            launcher/cityvault-launcher-win.zip
-            launcher/cityvault-launcher-linux.tar.gz
-            launcher/cityvault-launcher-*/resources/app.asar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          files: dist/cityvault-${{ env.VERSION }}.zip
+          name: CityVault v${{ env.VERSION }}
+          body: ${{ steps.changelog.outputs.changelog }}
+          tag_name: v${{ env.VERSION }}
 
-      - name: Prepare launcher version JSON
+      - name: Remove version.json
+        run: rm -f version.json
+
+      - name: Update JSON on gh-pages
         run: |
-          mkdir -p launcher_version_tmp
-          if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
-            VERSION="${GITHUB_REF#refs/tags/v}"
-            echo "{ \"version\": \"$VERSION\" }" > launcher_version_tmp/launcher-version.json
-          else
-            echo "{ \"version\": \"dev-${GITHUB_RUN_NUMBER}\" }" > launcher_version_tmp/dev-launcher-version.json
-          fi
-        shell: bash
+          git config user.name "github-actions"
+          git config user.email "github-actions@users.noreply.github.com"
+          git fetch origin gh-pages
+          git checkout gh-pages
 
-      - name: Deploy launcher version JSON to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./launcher_version_tmp
-          destination_dir: launcher
-          keep_files: true
-          publish_branch: gh-pages
-          commit_message: Update launcher version JSON from ${{ github.ref }}
+          if [[ "${{ env.IS_TAG }}" == "true" ]]; then
+            echo '{
+              "latest": "${{ env.VERSION }}",
+              "url": "https://github.com/${{ github.repository }}/releases/download/v${{ env.VERSION }}/cityvault-${{ env.VERSION }}.zip",
+              "notes": "See https://github.com/${{ github.repository }}/releases/tag/v${{ env.VERSION }}"
+            }' > update.json
+            git add update.json
+            git commit -m "Update update.json for v${{ env.VERSION }}" || echo "No changes"
+          else
+            echo '{ "version": "${{ env.VERSION }}" }' > dev-version.json
+            git add dev-version.json
+            git commit -m "Update dev-version.json for $GITHUB_SHA" || echo "No changes"
+          fi
+
+          git push origin gh-pages
