--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,7 +102,7 @@ jobs:
           "--ignore=^/docs"
           "--ignore=.*\\.map"
           "--ignore=.*\\.md"
-          "--ignore=^/node_modules/(electron|.*-dev).*"
+          "--ignore=^/node_modules/`(electron`|.*-dev`)`.*"
           "--ignore=^/config"
 
       - name: Archive Windows launcher
