--- a/.github/workflows/build-launcher.yml
+++ b/.github/workflows/build-launcher.yml
@@ -1,4 +1,4 @@
-name: Release CityVault
+name: Build Electron Launcher
 
 on:
   push:
@@ -7,108 +7,118 @@ on:
     tags:
       - 'v*'
 
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
 jobs:
-  build-release:
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+        arch: [x64]
+    runs-on: ${{ matrix.os }}
+
+    defaults:
+      run:
+        working-directory: launcher
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
-          persist-credentials: true
+          node-version: 20
 
-      - name: Set version string
-        id: set_version
+      - name: Install dependencies
         run: |
-          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-            echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
-            echo "IS_TAG=true" >> $GITHUB_ENV
-          else
-            echo "VERSION=dev-${GITHUB_RUN_NUMBER}" >> $GITHUB_ENV
-            echo "IS_TAG=false" >> $GITHUB_ENV
-          fi
+          npm ci
+          npm install --save-dev @electron/packager
 
-      - name: Get previous tag (only on tag push)
-        if: env.IS_TAG == 'true'
-        id: prev
+      - name: Package launcher (Linux)
+        if: matrix.os == 'ubuntu-latest'
         run: |
-          PREV=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
-          echo "previous_tag=$PREV" >> $GITHUB_OUTPUT
+          npx @electron/packager . cityvault-launcher \
+            --platform=linux \
+            --arch=${{ matrix.arch }} \
+            --icon=icon.ico \
+            --overwrite \
+            --asar.unpack=config.json \
+            --ignore="^/tests" \
+            --ignore="^/docs" \
+            --ignore=".*\\.map" \
+            --ignore=".*\\.md" \
+            --ignore="^/node_modules/(electron|.*-dev).*" \
+            --ignore="^/config"
+        shell: bash
 
-      - name: Generate changelog (only on tag push)
-        if: env.IS_TAG == 'true'
-        id: changelog
-        run: |
-          if [ -z "${{ steps.prev.outputs.previous_tag }}" ]; then
-            RANGE=""
-          else
-            RANGE="${{ steps.prev.outputs.previous_tag }}..${{ github.ref_name }}"
-          fi
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          git log $RANGE --pretty=format:"- %s" | grep -vEi 'update.*version\.json|bump.*version\.json|version\.json' >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+      - name: Package launcher (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: cmd
+        run: >
+          npx @electron/packager . cityvault-launcher
+          --platform=win32
+          --arch=${{ matrix.arch }}
+          --icon=icon.ico
+          --overwrite
+          --asar.unpack=config.json
+          "--ignore=^/tests"
+          "--ignore=^/docs"
+          "--ignore=.*\\.map"
+          "--ignore=.*\\.md"
+          "--ignore=^/node_modules/`(electron`|.*-dev`)`.*"
+          "--ignore=^/config"
 
-      - name: Download Windows launcher artifact
-        uses: actions/download-artifact@v4
+      - name: Archive build (Windows) for GitHub Release only
+        if: matrix.os == 'windows-latest' && startsWith(github.ref, 'refs/tags/')
+        run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }} -DestinationPath cityvault-launcher-win.zip
+        shell: pwsh
+
+      - name: Archive build (Linux) for GitHub Release only
+        if: matrix.os == 'ubuntu-latest' && startsWith(github.ref, 'refs/tags/')
+        run: tar -czf cityvault-launcher-linux.tar.gz cityvault-launcher-linux-${{ matrix.arch }}
+        shell: bash
+
+      - name: Upload Windows build artifact (folder)
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
         with:
           name: cityvault-launcher-win
-          path: launcher_downloads/windows
+          path: launcher/cityvault-launcher-win32-${{ matrix.arch }}
 
-      - name: Download Linux launcher artifact
-        uses: actions/download-artifact@v4
+      - name: Upload Linux build artifact (folder)
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-artifact@v4
         with:
           name: cityvault-launcher-linux
-          path: launcher_downloads/linux
+          path: launcher/cityvault-launcher-linux-${{ matrix.arch }}
 
-      - name: Write version.json for ZIP
-        run: echo '{ "version": "${{ env.VERSION }}" }' > version.json
-
-      - name: Create ZIP artifact
-        run: |
-          mkdir -p dist
-          zip -r "dist/cityvault-${{ env.VERSION }}.zip" . \
-            -x "*.git*" "node_modules/*" "dist/*"
-
-      - name: Debug ZIP output
-        run: ls -lh dist/
-
-      - name: Upload Release ZIP (only on tag)
-        if: env.IS_TAG == 'true'
+      - name: Upload zipped build to GitHub Release (only for tag)
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/cityvault-${{ env.VERSION }}.zip
-          name: CityVault v${{ env.VERSION }}
-          body: ${{ steps.changelog.outputs.changelog }}
-          tag_name: v${{ env.VERSION }}
+          files: |
+            launcher/cityvault-launcher-win.zip
+            launcher/cityvault-launcher-linux.tar.gz
+            launcher/cityvault-launcher-*/resources/app.asar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Remove version.json
-        run: rm -f version.json
-
-      - name: Update JSON on gh-pages
+      - name: Prepare launcher version JSON
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git fetch origin gh-pages
-          git checkout gh-pages
-
-          if [[ "${{ env.IS_TAG }}" == "true" ]]; then
-            echo '{
-              "latest": "${{ env.VERSION }}",
-              "url": "https://github.com/${{ github.repository }}/releases/download/v${{ env.VERSION }}/cityvault-${{ env.VERSION }}.zip",
-              "notes": "See https://github.com/${{ github.repository }}/releases/tag/v${{ env.VERSION }}"
-            }' > update.json
-            git add update.json
-            git commit -m "Update update.json for v${{ env.VERSION }}" || echo "No changes"
+          mkdir -p launcher_version_tmp
+          if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
+            VERSION="${GITHUB_REF#refs/tags/v}"
+            echo "{ \"version\": \"$VERSION\" }" > launcher_version_tmp/launcher-version.json
           else
-            echo '{ "version": "${{ env.VERSION }}" }' > dev-version.json
-            git add dev-version.json
-            git commit -m "Update dev-version.json for $GITHUB_SHA" || echo "No changes"
+            echo "{ \"version\": \"dev-${GITHUB_RUN_NUMBER}\" }" > launcher_version_tmp/dev-launcher-version.json
           fi
+        shell: bash
 
-          git push origin gh-pages
+      - name: Deploy launcher version JSON to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./launcher_version_tmp
+          destination_dir: launcher
+          keep_files: true
+          publish_branch: gh-pages
+          commit_message: Update launcher version JSON from ${{ github.ref }}
