--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,6 @@ permissions:
 
 jobs:
   build-release:
-    strategy:
-      matrix:
-        arch: [x64]
     runs-on: ubuntu-latest
 
     steps:
@@ -54,72 +51,32 @@ jobs:
             RANGE="${{ steps.prev.outputs.previous_tag }}..${{ github.ref_name }}"
           fi
           echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          git log $RANGE --pretty=format:"- %s" | grep -vEi 'update.*version\\.json|bump.*version\\.json|version\\.json' >> $GITHUB_OUTPUT
+          git log $RANGE --pretty=format:"- %s" | grep -vEi 'update.*version\.json|bump.*version\.json|version\.json' >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Download Windows launcher artifact
+        uses: actions/download-artifact@v4
         with:
-          node-version: 20
+          name: cityvault-launcher-win
+          path: launcher_downloads/windows
 
-      - name: Install launcher dependencies
-        working-directory: launcher
+      - name: Download Linux launcher artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: cityvault-launcher-linux
+          path: launcher_downloads/linux
+
+      - name: Write version.json for ZIP
+        run: echo '{ "version": "${{ env.VERSION }}" }' > version.json
+
+      - name: Create ZIP artifact
         run: |
-          npm ci
-          npm install --save-dev @electron/packager
+          mkdir -p dist
+          zip -r "dist/cityvault-${{ env.VERSION }}.zip" . \
+            -x "*.git*" "node_modules/*" "dist/*"
 
-      - name: Build Electron launcher (Linux)
-        working-directory: launcher
-        run: |
-          npx @electron/packager . cityvault-launcher \
-            --platform=linux \
-            --arch=${{ matrix.arch }} \
-            --icon=icon.ico \
-            --overwrite \
-            --asar.unpack=config.json \
-            --ignore="^/tests" \
-            --ignore="^/docs" \
-            --ignore=".*\\.map" \
-            --ignore=".*\\.md" \
-            --ignore="^/node_modules/(electron|.*-dev).*" \
-            --ignore="^/config"
-
-      - name: Archive Linux launcher
-        working-directory: launcher
-        run: tar -czf cityvault-launcher-linux.tar.gz cityvault-launcher-linux-${{ matrix.arch }}
-
-      - name: Build Electron launcher (Windows)
-        shell: cmd
-        working-directory: launcher
-        run: >
-          npx @electron/packager . cityvault-launcher
-          --platform=win32
-          --arch=${{ matrix.arch }}
-          --icon=icon.ico
-          --overwrite
-          --asar.unpack=config.json
-          "--ignore=^/tests"
-          "--ignore=^/docs"
-          "--ignore=.*\\.map"
-          "--ignore=.*\\.md"
-          "--ignore=^/node_modules/`(electron`|.*-dev`)`.*"
-          "--ignore=^/config"
-
-      - name: Archive Windows launcher
-        shell: pwsh
-        working-directory: launcher
-        run: Compress-Archive -Path cityvault-launcher-win32-${{ matrix.arch }} -DestinationPath cityvault-launcher-win.zip
-
-      - name: Write version.json
-        run: |
-          echo '{ "version": "${{ env.VERSION }}" }' > version.json
-
-      - name: Create CityVault ZIP including launchers
-        run: |
-          mkdir -p dist/launchers
-          mv launcher/cityvault-launcher-win.zip dist/launchers/
-          mv launcher/cityvault-launcher-linux.tar.gz dist/launchers/
-          zip -r "dist/cityvault-${{ env.VERSION }}.zip" . -x "*.git*" "node_modules/*"
+      - name: Debug ZIP output
+        run: ls -lh dist/
 
       - name: Upload Release ZIP (only on tag)
         if: env.IS_TAG == 'true'
