--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,7 +120,8 @@ jobs:
           path: launcher_downloads/cityvault-launcher-linux
 
       - name: Write version.json
-        run: echo "{ \"version\": \"${{ env.VERSION }}\" }" > version.json
+        run: |
+          echo "{ \"version\": \"${{ env.VERSION }}\" }" > version.json
 
       - name: Create combined release ZIP
         run: |
