--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,7 +130,7 @@ jobs:
 
           echo "log<<EOF" >> $GITHUB_OUTPUT
           git log $RANGE --pretty=format:"- %s" |
-            grep -vEi 'update.*version\.json|bump.*version\.json|version\.json' >> $GITHUB_OUTPUT
+            grep -vE '^[-] Bump version to v[0-9]+\.[0-9]+\.[0-9]+$' >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Download Windows launcher
