Support updating the .asar of the launcher when the site is updated.

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@ public/launcher/cityvault-launcher-win.zip
 /launcher_downloads
 ImageServer.zip
 public/launcher/cityvault-launcher-linux.zip
+public/launcher/app.asar
+public/launcher/app.hash
