--- a/launcher/package.json
+++ b/launcher/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.0",
     "fast-xml-parser": "^4.3.5",
     "p-limit": "^6.2.0",
+    "unzipper": "^0.12.3",
     "which": "^5.0.0",
     "xml2js": "^0.6.2"
   },
