--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@small-tech/auto-encrypt": "^4.3.0",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
+    "axios": "^1.10.0",
     "better-sqlite3": "^11.10.0",
     "better-sqlite3-session-store": "^0.1.0",
     "body-parser": "^2.2.0",
