--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,6 @@ public/launcher/launcher.zip
 public/images/Michiyo-ServerIcon-Pride.png
 launcher/debug.txt
 launcher/config.json
+scripts/diff-report.txt
+/tmp
+/renders
