--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.mjs",
   "scripts": {
     "start": "node server.mjs",
-    "postinstall": "node patch-autoencrypt.js"
+    "postinstall": "node patch-autoencrypt.js",
+    "tailwind:build": "tools\\tailwind.exe -c tailwind.config.js -i styles\\tailwind.css -o public\\css\\output.css --minify",
+	"tailwind:watch": "tools\\tailwind.exe --max-old-space-size=4096 -c tailwind.config.js -i styles\\tailwind.css -o public\\css\\output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -42,5 +44,10 @@
     "sharp": "^0.34.1",
     "tar": "^7.4.3",
     "tga2png": "^0.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
