--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-stream-zip": "^1.15.0",
     "nodemailer": "^7.0.3",
     "rotating-file-stream": "^3.2.6",
+    "semver": "^7.7.2",
     "session-file-store": "^1.5.0",
     "sharp": "^0.34.1",
     "tar": "^7.4.3",
